# heart-fail-pred

./: Makefile  README copy.md  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
src/data_ingestion/: data_ingestion.py
src/data_preprocessing/: data_preprocessing.py
src/models/: model.py  model_eval.py
src/utils/: utils_modules.py
