[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "heart-fail-pred"
version = "0.0.1"
description = "na"
authors = [
  { name = "na" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["heart-fail-pred"]
include = ["pyproject.toml", "heart-fail-pred/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["heart-fail-pred"]
force-sort-within-sections = true

